--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="" style="background:mistyrose">
+<html lang="" style="background:seashell">
 <meta charset="utf-8">
 
 <title>...</title>
